DLP_PL12/bin/parser/y.output
   0  $accept : program $end

   1  program : _program main

   2  _program :
   3           | _program variable_definition
   4           | _program function_definition

   5  $$1 :

   6  main : DEF $$1 MAIN '(' ')' ':' VOID '{' function_body '}'

   7  variable_definition : variables ':' type ';'

   8  variables : ID
   9            | variables ',' ID

  10  $$2 :

  11  function_definition : DEF $$2 ID '(' parameters ')' ':' return_type '{' function_body '}'

  12  parameters :
  13             | _parameters

  14  _parameters : parameter
  15              | _parameters ',' parameter

  16  parameter : ID ':' simple_type

  17  return_type : simple_type
  18              | VOID

  19  function_body :
  20                | variable_definitions statements
  21                | variable_definitions
  22                | statements

  23  variable_definitions : variable_definition
  24                       | variable_definitions variable_definition

  25  statements : statement
  26             | statements statement

  27  statement : assignment
  28            | function_call_as_statement
  29            | return
  30            | while
  31            | if
  32            | read
  33            | write

  34  type : simple_type
  35       | array
  36       | struct

  37  simple_type : INT
  38              | DOUBLE
  39              | CHAR

  40  array : '[' INT_CONSTANT ']' type

  41  struct : STRUCT '{' struct_body '}'

  42  struct_body : variable_definition
  43              | struct_body variable_definition

  44  assignment : expression '=' expression ';'

  45  read : INPUT expressions ';'

  46  $$3 :

  47  write : PRINT $$3 expressions ';'

  48  expressions : expression
  49              | expressions ',' expression

  50  while : WHILE expression ':' '{' statements '}'
  51        | WHILE expression ':' statement

  52  if : IF expression ':' '{' statements '}'
  53     | IF expression ':' '{' statements '}' ELSE '{' statements '}'
  54     | IF expression ':' '{' statements '}' ELSE statement
  55     | IF expression ':' statement
  56     | IF expression ':' statement ELSE '{' statements '}'
  57     | IF expression ':' statement ELSE statement

  58  $$4 :

  59  return : RETURN $$4 expression ';'

  60  parameters_in_funcion_call :
  61                             | expressions

  62  function_call_as_statement : ID '(' parameters_in_funcion_call ')' ';'

  63  function_call_as_expression : ID '(' parameters_in_funcion_call ')'

  64  expression : expression AND expression
  65             | expression OR expression
  66             | expression '>' expression
  67             | expression GREATER_OR_EQUAL expression
  68             | expression '<' expression
  69             | expression LESS_OR_EQUAL expression
  70             | expression DISTINCT expression
  71             | expression EQUALS expression
  72             | expression '+' expression
  73             | expression '-' expression
  74             | expression '*' expression
  75             | expression '/' expression
  76             | expression '%' expression
  77             | '!' expression
  78             | '-' expression
  79             | '(' simple_type ')' expression
  80             | expression '.' ID
  81             | expression '[' expression ']'
  82             | '(' expression ')'
  83             | function_call_as_expression
  84             | INT_CONSTANT
  85             | REAL_CONSTANT
  86             | CHAR_CONSTANT
  87             | ID

state 0
	$accept : . program $end  (0)
	_program : .  (2)

	.  reduce 2

	program  goto 1
	_program  goto 2


state 1
	$accept : program . $end  (0)

	$end  accept


state 2
	program : _program . main  (1)
	_program : _program . variable_definition  (3)
	_program : _program . function_definition  (4)

	DEF  shift 3
	ID  shift 4
	.  error

	main  goto 5
	variable_definition  goto 6
	function_definition  goto 7
	variables  goto 8


state 3
	main : DEF . $$1 MAIN '(' ')' ':' VOID '{' function_body '}'  (6)
	function_definition : DEF . $$2 ID '(' parameters ')' ':' return_type '{' function_body '}'  (11)
	$$1 : .  (5)
	$$2 : .  (10)

	ID  reduce 10
	MAIN  reduce 5

	$$1  goto 9
	$$2  goto 10


state 4
	variables : ID .  (8)

	.  reduce 8


state 5
	program : _program main .  (1)

	.  reduce 1


state 6
	_program : _program variable_definition .  (3)

	.  reduce 3


state 7
	_program : _program function_definition .  (4)

	.  reduce 4


state 8
	variable_definition : variables . ':' type ';'  (7)
	variables : variables . ',' ID  (9)

	':'  shift 11
	','  shift 12
	.  error


state 9
	main : DEF $$1 . MAIN '(' ')' ':' VOID '{' function_body '}'  (6)

	MAIN  shift 13
	.  error


state 10
	function_definition : DEF $$2 . ID '(' parameters ')' ':' return_type '{' function_body '}'  (11)

	ID  shift 14
	.  error


state 11
	variable_definition : variables ':' . type ';'  (7)

	INT  shift 15
	DOUBLE  shift 16
	CHAR  shift 17
	STRUCT  shift 18
	'['  shift 19
	.  error

	type  goto 20
	simple_type  goto 21
	array  goto 22
	struct  goto 23


state 12
	variables : variables ',' . ID  (9)

	ID  shift 24
	.  error


state 13
	main : DEF $$1 MAIN . '(' ')' ':' VOID '{' function_body '}'  (6)

	'('  shift 25
	.  error


state 14
	function_definition : DEF $$2 ID . '(' parameters ')' ':' return_type '{' function_body '}'  (11)

	'('  shift 26
	.  error


state 15
	simple_type : INT .  (37)

	.  reduce 37


state 16
	simple_type : DOUBLE .  (38)

	.  reduce 38


state 17
	simple_type : CHAR .  (39)

	.  reduce 39


state 18
	struct : STRUCT . '{' struct_body '}'  (41)

	'{'  shift 27
	.  error


state 19
	array : '[' . INT_CONSTANT ']' type  (40)

	INT_CONSTANT  shift 28
	.  error


state 20
	variable_definition : variables ':' type . ';'  (7)

	';'  shift 29
	.  error


state 21
	type : simple_type .  (34)

	.  reduce 34


state 22
	type : array .  (35)

	.  reduce 35


state 23
	type : struct .  (36)

	.  reduce 36


state 24
	variables : variables ',' ID .  (9)

	.  reduce 9


state 25
	main : DEF $$1 MAIN '(' . ')' ':' VOID '{' function_body '}'  (6)

	')'  shift 30
	.  error


state 26
	function_definition : DEF $$2 ID '(' . parameters ')' ':' return_type '{' function_body '}'  (11)
	parameters : .  (12)

	ID  shift 31
	')'  reduce 12

	parameters  goto 32
	_parameters  goto 33
	parameter  goto 34


state 27
	struct : STRUCT '{' . struct_body '}'  (41)

	ID  shift 4
	.  error

	variable_definition  goto 35
	variables  goto 8
	struct_body  goto 36


state 28
	array : '[' INT_CONSTANT . ']' type  (40)

	']'  shift 37
	.  error


state 29
	variable_definition : variables ':' type ';' .  (7)

	.  reduce 7


state 30
	main : DEF $$1 MAIN '(' ')' . ':' VOID '{' function_body '}'  (6)

	':'  shift 38
	.  error


state 31
	parameter : ID . ':' simple_type  (16)

	':'  shift 39
	.  error


state 32
	function_definition : DEF $$2 ID '(' parameters . ')' ':' return_type '{' function_body '}'  (11)

	')'  shift 40
	.  error


state 33
	parameters : _parameters .  (13)
	_parameters : _parameters . ',' parameter  (15)

	','  shift 41
	')'  reduce 13


state 34
	_parameters : parameter .  (14)

	.  reduce 14


state 35
	struct_body : variable_definition .  (42)

	.  reduce 42


state 36
	struct : STRUCT '{' struct_body . '}'  (41)
	struct_body : struct_body . variable_definition  (43)

	ID  shift 4
	'}'  shift 42
	.  error

	variable_definition  goto 43
	variables  goto 8


state 37
	array : '[' INT_CONSTANT ']' . type  (40)

	INT  shift 15
	DOUBLE  shift 16
	CHAR  shift 17
	STRUCT  shift 18
	'['  shift 19
	.  error

	type  goto 44
	simple_type  goto 21
	array  goto 22
	struct  goto 23


state 38
	main : DEF $$1 MAIN '(' ')' ':' . VOID '{' function_body '}'  (6)

	VOID  shift 45
	.  error


state 39
	parameter : ID ':' . simple_type  (16)

	INT  shift 15
	DOUBLE  shift 16
	CHAR  shift 17
	.  error

	simple_type  goto 46


state 40
	function_definition : DEF $$2 ID '(' parameters ')' . ':' return_type '{' function_body '}'  (11)

	':'  shift 47
	.  error


state 41
	_parameters : _parameters ',' . parameter  (15)

	ID  shift 31
	.  error

	parameter  goto 48


state 42
	struct : STRUCT '{' struct_body '}' .  (41)

	.  reduce 41


state 43
	struct_body : struct_body variable_definition .  (43)

	.  reduce 43


state 44
	array : '[' INT_CONSTANT ']' type .  (40)

	.  reduce 40


state 45
	main : DEF $$1 MAIN '(' ')' ':' VOID . '{' function_body '}'  (6)

	'{'  shift 49
	.  error


state 46
	parameter : ID ':' simple_type .  (16)

	.  reduce 16


state 47
	function_definition : DEF $$2 ID '(' parameters ')' ':' . return_type '{' function_body '}'  (11)

	INT  shift 15
	DOUBLE  shift 16
	CHAR  shift 17
	VOID  shift 50
	.  error

	return_type  goto 51
	simple_type  goto 52


state 48
	_parameters : _parameters ',' parameter .  (15)

	.  reduce 15


state 49
	main : DEF $$1 MAIN '(' ')' ':' VOID '{' . function_body '}'  (6)
	function_body : .  (19)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	INPUT  shift 56
	PRINT  shift 57
	WHILE  shift 58
	IF  shift 59
	RETURN  shift 60
	ID  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	'}'  reduce 19

	variable_definition  goto 65
	function_body  goto 66
	variables  goto 8
	variable_definitions  goto 67
	statements  goto 68
	statement  goto 69
	assignment  goto 70
	function_call_as_statement  goto 71
	return  goto 72
	while  goto 73
	if  goto 74
	read  goto 75
	write  goto 76
	expression  goto 77
	function_call_as_expression  goto 78


state 50
	return_type : VOID .  (18)

	.  reduce 18


state 51
	function_definition : DEF $$2 ID '(' parameters ')' ':' return_type . '{' function_body '}'  (11)

	'{'  shift 79
	.  error


state 52
	return_type : simple_type .  (17)

	.  reduce 17


state 53
	expression : INT_CONSTANT .  (84)

	.  reduce 84


state 54
	expression : REAL_CONSTANT .  (85)

	.  reduce 85


state 55
	expression : CHAR_CONSTANT .  (86)

	.  reduce 86


state 56
	read : INPUT . expressions ';'  (45)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	expression  goto 81
	expressions  goto 82
	function_call_as_expression  goto 78


state 57
	write : PRINT . $$3 expressions ';'  (47)
	$$3 : .  (46)

	.  reduce 46

	$$3  goto 83


state 58
	while : WHILE . expression ':' '{' statements '}'  (50)
	while : WHILE . expression ':' statement  (51)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	expression  goto 84
	function_call_as_expression  goto 78


state 59
	if : IF . expression ':' '{' statements '}'  (52)
	if : IF . expression ':' '{' statements '}' ELSE '{' statements '}'  (53)
	if : IF . expression ':' '{' statements '}' ELSE statement  (54)
	if : IF . expression ':' statement  (55)
	if : IF . expression ':' statement ELSE '{' statements '}'  (56)
	if : IF . expression ':' statement ELSE statement  (57)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	expression  goto 85
	function_call_as_expression  goto 78


state 60
	return : RETURN . $$4 expression ';'  (59)
	$$4 : .  (58)

	.  reduce 58

	$$4  goto 86


state 61
	variables : ID .  (8)
	function_call_as_statement : ID . '(' parameters_in_funcion_call ')' ';'  (62)
	function_call_as_expression : ID . '(' parameters_in_funcion_call ')'  (63)
	expression : ID .  (87)

	'('  shift 87
	'='  reduce 87
	AND  reduce 87
	OR  reduce 87
	'>'  reduce 87
	GREATER_OR_EQUAL  reduce 87
	'<'  reduce 87
	LESS_OR_EQUAL  reduce 87
	DISTINCT  reduce 87
	EQUALS  reduce 87
	'+'  reduce 87
	'-'  reduce 87
	'*'  reduce 87
	'/'  reduce 87
	'%'  reduce 87
	'.'  reduce 87
	'['  reduce 87
	':'  reduce 8
	','  reduce 8


state 62
	expression : '-' . expression  (78)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	expression  goto 88
	function_call_as_expression  goto 78


state 63
	expression : '!' . expression  (77)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	expression  goto 89
	function_call_as_expression  goto 78


state 64
	expression : '(' . simple_type ')' expression  (79)
	expression : '(' . expression ')'  (82)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	INT  shift 15
	DOUBLE  shift 16
	CHAR  shift 17
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	simple_type  goto 90
	expression  goto 91
	function_call_as_expression  goto 78


state 65
	variable_definitions : variable_definition .  (23)

	.  reduce 23


state 66
	main : DEF $$1 MAIN '(' ')' ':' VOID '{' function_body . '}'  (6)

	'}'  shift 92
	.  error


state 67
	function_body : variable_definitions . statements  (20)
	function_body : variable_definitions .  (21)
	variable_definitions : variable_definitions . variable_definition  (24)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	INPUT  shift 56
	PRINT  shift 57
	WHILE  shift 58
	IF  shift 59
	RETURN  shift 60
	ID  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	'}'  reduce 21

	variable_definition  goto 93
	variables  goto 8
	statements  goto 94
	statement  goto 69
	assignment  goto 70
	function_call_as_statement  goto 71
	return  goto 72
	while  goto 73
	if  goto 74
	read  goto 75
	write  goto 76
	expression  goto 77
	function_call_as_expression  goto 78


state 68
	function_body : statements .  (22)
	statements : statements . statement  (26)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	INPUT  shift 56
	PRINT  shift 57
	WHILE  shift 58
	IF  shift 59
	RETURN  shift 60
	ID  shift 95
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	'}'  reduce 22

	statement  goto 96
	assignment  goto 70
	function_call_as_statement  goto 71
	return  goto 72
	while  goto 73
	if  goto 74
	read  goto 75
	write  goto 76
	expression  goto 77
	function_call_as_expression  goto 78


state 69
	statements : statement .  (25)

	.  reduce 25


state 70
	statement : assignment .  (27)

	.  reduce 27


state 71
	statement : function_call_as_statement .  (28)

	.  reduce 28


state 72
	statement : return .  (29)

	.  reduce 29


state 73
	statement : while .  (30)

	.  reduce 30


state 74
	statement : if .  (31)

	.  reduce 31


state 75
	statement : read .  (32)

	.  reduce 32


state 76
	statement : write .  (33)

	.  reduce 33


state 77
	assignment : expression . '=' expression ';'  (44)
	expression : expression . AND expression  (64)
	expression : expression . OR expression  (65)
	expression : expression . '>' expression  (66)
	expression : expression . GREATER_OR_EQUAL expression  (67)
	expression : expression . '<' expression  (68)
	expression : expression . LESS_OR_EQUAL expression  (69)
	expression : expression . DISTINCT expression  (70)
	expression : expression . EQUALS expression  (71)
	expression : expression . '+' expression  (72)
	expression : expression . '-' expression  (73)
	expression : expression . '*' expression  (74)
	expression : expression . '/' expression  (75)
	expression : expression . '%' expression  (76)
	expression : expression . '.' ID  (80)
	expression : expression . '[' expression ']'  (81)

	'='  shift 97
	AND  shift 98
	OR  shift 99
	'>'  shift 100
	GREATER_OR_EQUAL  shift 101
	'<'  shift 102
	LESS_OR_EQUAL  shift 103
	DISTINCT  shift 104
	EQUALS  shift 105
	'+'  shift 106
	'-'  shift 107
	'*'  shift 108
	'/'  shift 109
	'%'  shift 110
	'.'  shift 111
	'['  shift 112
	.  error


state 78
	expression : function_call_as_expression .  (83)

	.  reduce 83


state 79
	function_definition : DEF $$2 ID '(' parameters ')' ':' return_type '{' . function_body '}'  (11)
	function_body : .  (19)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	INPUT  shift 56
	PRINT  shift 57
	WHILE  shift 58
	IF  shift 59
	RETURN  shift 60
	ID  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	'}'  reduce 19

	variable_definition  goto 65
	function_body  goto 113
	variables  goto 8
	variable_definitions  goto 67
	statements  goto 68
	statement  goto 69
	assignment  goto 70
	function_call_as_statement  goto 71
	return  goto 72
	while  goto 73
	if  goto 74
	read  goto 75
	write  goto 76
	expression  goto 77
	function_call_as_expression  goto 78


state 80
	function_call_as_expression : ID . '(' parameters_in_funcion_call ')'  (63)
	expression : ID .  (87)

	'('  shift 114
	'='  reduce 87
	AND  reduce 87
	OR  reduce 87
	'>'  reduce 87
	GREATER_OR_EQUAL  reduce 87
	'<'  reduce 87
	LESS_OR_EQUAL  reduce 87
	DISTINCT  reduce 87
	EQUALS  reduce 87
	'+'  reduce 87
	'-'  reduce 87
	'*'  reduce 87
	'/'  reduce 87
	'%'  reduce 87
	'.'  reduce 87
	'['  reduce 87
	']'  reduce 87
	')'  reduce 87
	':'  reduce 87
	';'  reduce 87
	','  reduce 87


state 81
	expressions : expression .  (48)
	expression : expression . AND expression  (64)
	expression : expression . OR expression  (65)
	expression : expression . '>' expression  (66)
	expression : expression . GREATER_OR_EQUAL expression  (67)
	expression : expression . '<' expression  (68)
	expression : expression . LESS_OR_EQUAL expression  (69)
	expression : expression . DISTINCT expression  (70)
	expression : expression . EQUALS expression  (71)
	expression : expression . '+' expression  (72)
	expression : expression . '-' expression  (73)
	expression : expression . '*' expression  (74)
	expression : expression . '/' expression  (75)
	expression : expression . '%' expression  (76)
	expression : expression . '.' ID  (80)
	expression : expression . '[' expression ']'  (81)

	AND  shift 98
	OR  shift 99
	'>'  shift 100
	GREATER_OR_EQUAL  shift 101
	'<'  shift 102
	LESS_OR_EQUAL  shift 103
	DISTINCT  shift 104
	EQUALS  shift 105
	'+'  shift 106
	'-'  shift 107
	'*'  shift 108
	'/'  shift 109
	'%'  shift 110
	'.'  shift 111
	'['  shift 112
	')'  reduce 48
	';'  reduce 48
	','  reduce 48


state 82
	read : INPUT expressions . ';'  (45)
	expressions : expressions . ',' expression  (49)

	';'  shift 115
	','  shift 116
	.  error


state 83
	write : PRINT $$3 . expressions ';'  (47)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	expression  goto 81
	expressions  goto 117
	function_call_as_expression  goto 78


state 84
	while : WHILE expression . ':' '{' statements '}'  (50)
	while : WHILE expression . ':' statement  (51)
	expression : expression . AND expression  (64)
	expression : expression . OR expression  (65)
	expression : expression . '>' expression  (66)
	expression : expression . GREATER_OR_EQUAL expression  (67)
	expression : expression . '<' expression  (68)
	expression : expression . LESS_OR_EQUAL expression  (69)
	expression : expression . DISTINCT expression  (70)
	expression : expression . EQUALS expression  (71)
	expression : expression . '+' expression  (72)
	expression : expression . '-' expression  (73)
	expression : expression . '*' expression  (74)
	expression : expression . '/' expression  (75)
	expression : expression . '%' expression  (76)
	expression : expression . '.' ID  (80)
	expression : expression . '[' expression ']'  (81)

	AND  shift 98
	OR  shift 99
	'>'  shift 100
	GREATER_OR_EQUAL  shift 101
	'<'  shift 102
	LESS_OR_EQUAL  shift 103
	DISTINCT  shift 104
	EQUALS  shift 105
	'+'  shift 106
	'-'  shift 107
	'*'  shift 108
	'/'  shift 109
	'%'  shift 110
	'.'  shift 111
	'['  shift 112
	':'  shift 118
	.  error


state 85
	if : IF expression . ':' '{' statements '}'  (52)
	if : IF expression . ':' '{' statements '}' ELSE '{' statements '}'  (53)
	if : IF expression . ':' '{' statements '}' ELSE statement  (54)
	if : IF expression . ':' statement  (55)
	if : IF expression . ':' statement ELSE '{' statements '}'  (56)
	if : IF expression . ':' statement ELSE statement  (57)
	expression : expression . AND expression  (64)
	expression : expression . OR expression  (65)
	expression : expression . '>' expression  (66)
	expression : expression . GREATER_OR_EQUAL expression  (67)
	expression : expression . '<' expression  (68)
	expression : expression . LESS_OR_EQUAL expression  (69)
	expression : expression . DISTINCT expression  (70)
	expression : expression . EQUALS expression  (71)
	expression : expression . '+' expression  (72)
	expression : expression . '-' expression  (73)
	expression : expression . '*' expression  (74)
	expression : expression . '/' expression  (75)
	expression : expression . '%' expression  (76)
	expression : expression . '.' ID  (80)
	expression : expression . '[' expression ']'  (81)

	AND  shift 98
	OR  shift 99
	'>'  shift 100
	GREATER_OR_EQUAL  shift 101
	'<'  shift 102
	LESS_OR_EQUAL  shift 103
	DISTINCT  shift 104
	EQUALS  shift 105
	'+'  shift 106
	'-'  shift 107
	'*'  shift 108
	'/'  shift 109
	'%'  shift 110
	'.'  shift 111
	'['  shift 112
	':'  shift 119
	.  error


state 86
	return : RETURN $$4 . expression ';'  (59)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	expression  goto 120
	function_call_as_expression  goto 78


state 87
	function_call_as_statement : ID '(' . parameters_in_funcion_call ')' ';'  (62)
	function_call_as_expression : ID '(' . parameters_in_funcion_call ')'  (63)
	parameters_in_funcion_call : .  (60)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	')'  reduce 60

	expression  goto 81
	expressions  goto 121
	parameters_in_funcion_call  goto 122
	function_call_as_expression  goto 78


state 88
	expression : expression . AND expression  (64)
	expression : expression . OR expression  (65)
	expression : expression . '>' expression  (66)
	expression : expression . GREATER_OR_EQUAL expression  (67)
	expression : expression . '<' expression  (68)
	expression : expression . LESS_OR_EQUAL expression  (69)
	expression : expression . DISTINCT expression  (70)
	expression : expression . EQUALS expression  (71)
	expression : expression . '+' expression  (72)
	expression : expression . '-' expression  (73)
	expression : expression . '*' expression  (74)
	expression : expression . '/' expression  (75)
	expression : expression . '%' expression  (76)
	expression : '-' expression .  (78)
	expression : expression . '.' ID  (80)
	expression : expression . '[' expression ']'  (81)

	'.'  shift 111
	'['  shift 112
	'='  reduce 78
	AND  reduce 78
	OR  reduce 78
	'>'  reduce 78
	GREATER_OR_EQUAL  reduce 78
	'<'  reduce 78
	LESS_OR_EQUAL  reduce 78
	DISTINCT  reduce 78
	EQUALS  reduce 78
	'+'  reduce 78
	'-'  reduce 78
	'*'  reduce 78
	'/'  reduce 78
	'%'  reduce 78
	']'  reduce 78
	')'  reduce 78
	':'  reduce 78
	';'  reduce 78
	','  reduce 78


state 89
	expression : expression . AND expression  (64)
	expression : expression . OR expression  (65)
	expression : expression . '>' expression  (66)
	expression : expression . GREATER_OR_EQUAL expression  (67)
	expression : expression . '<' expression  (68)
	expression : expression . LESS_OR_EQUAL expression  (69)
	expression : expression . DISTINCT expression  (70)
	expression : expression . EQUALS expression  (71)
	expression : expression . '+' expression  (72)
	expression : expression . '-' expression  (73)
	expression : expression . '*' expression  (74)
	expression : expression . '/' expression  (75)
	expression : expression . '%' expression  (76)
	expression : '!' expression .  (77)
	expression : expression . '.' ID  (80)
	expression : expression . '[' expression ']'  (81)

	'.'  shift 111
	'['  shift 112
	'='  reduce 77
	AND  reduce 77
	OR  reduce 77
	'>'  reduce 77
	GREATER_OR_EQUAL  reduce 77
	'<'  reduce 77
	LESS_OR_EQUAL  reduce 77
	DISTINCT  reduce 77
	EQUALS  reduce 77
	'+'  reduce 77
	'-'  reduce 77
	'*'  reduce 77
	'/'  reduce 77
	'%'  reduce 77
	']'  reduce 77
	')'  reduce 77
	':'  reduce 77
	';'  reduce 77
	','  reduce 77


state 90
	expression : '(' simple_type . ')' expression  (79)

	')'  shift 123
	.  error


state 91
	expression : expression . AND expression  (64)
	expression : expression . OR expression  (65)
	expression : expression . '>' expression  (66)
	expression : expression . GREATER_OR_EQUAL expression  (67)
	expression : expression . '<' expression  (68)
	expression : expression . LESS_OR_EQUAL expression  (69)
	expression : expression . DISTINCT expression  (70)
	expression : expression . EQUALS expression  (71)
	expression : expression . '+' expression  (72)
	expression : expression . '-' expression  (73)
	expression : expression . '*' expression  (74)
	expression : expression . '/' expression  (75)
	expression : expression . '%' expression  (76)
	expression : expression . '.' ID  (80)
	expression : expression . '[' expression ']'  (81)
	expression : '(' expression . ')'  (82)

	AND  shift 98
	OR  shift 99
	'>'  shift 100
	GREATER_OR_EQUAL  shift 101
	'<'  shift 102
	LESS_OR_EQUAL  shift 103
	DISTINCT  shift 104
	EQUALS  shift 105
	'+'  shift 106
	'-'  shift 107
	'*'  shift 108
	'/'  shift 109
	'%'  shift 110
	'.'  shift 111
	'['  shift 112
	')'  shift 124
	.  error


state 92
	main : DEF $$1 MAIN '(' ')' ':' VOID '{' function_body '}' .  (6)

	.  reduce 6


state 93
	variable_definitions : variable_definitions variable_definition .  (24)

	.  reduce 24


state 94
	function_body : variable_definitions statements .  (20)
	statements : statements . statement  (26)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	INPUT  shift 56
	PRINT  shift 57
	WHILE  shift 58
	IF  shift 59
	RETURN  shift 60
	ID  shift 95
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	'}'  reduce 20

	statement  goto 96
	assignment  goto 70
	function_call_as_statement  goto 71
	return  goto 72
	while  goto 73
	if  goto 74
	read  goto 75
	write  goto 76
	expression  goto 77
	function_call_as_expression  goto 78


state 95
	function_call_as_statement : ID . '(' parameters_in_funcion_call ')' ';'  (62)
	function_call_as_expression : ID . '(' parameters_in_funcion_call ')'  (63)
	expression : ID .  (87)

	'('  shift 87
	'='  reduce 87
	AND  reduce 87
	OR  reduce 87
	'>'  reduce 87
	GREATER_OR_EQUAL  reduce 87
	'<'  reduce 87
	LESS_OR_EQUAL  reduce 87
	DISTINCT  reduce 87
	EQUALS  reduce 87
	'+'  reduce 87
	'-'  reduce 87
	'*'  reduce 87
	'/'  reduce 87
	'%'  reduce 87
	'.'  reduce 87
	'['  reduce 87


state 96
	statements : statements statement .  (26)

	.  reduce 26


state 97
	assignment : expression '=' . expression ';'  (44)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	expression  goto 125
	function_call_as_expression  goto 78


state 98
	expression : expression AND . expression  (64)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	expression  goto 126
	function_call_as_expression  goto 78


state 99
	expression : expression OR . expression  (65)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	expression  goto 127
	function_call_as_expression  goto 78


state 100
	expression : expression '>' . expression  (66)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	expression  goto 128
	function_call_as_expression  goto 78


state 101
	expression : expression GREATER_OR_EQUAL . expression  (67)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	expression  goto 129
	function_call_as_expression  goto 78


state 102
	expression : expression '<' . expression  (68)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	expression  goto 130
	function_call_as_expression  goto 78


state 103
	expression : expression LESS_OR_EQUAL . expression  (69)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	expression  goto 131
	function_call_as_expression  goto 78


state 104
	expression : expression DISTINCT . expression  (70)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	expression  goto 132
	function_call_as_expression  goto 78


state 105
	expression : expression EQUALS . expression  (71)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	expression  goto 133
	function_call_as_expression  goto 78


state 106
	expression : expression '+' . expression  (72)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	expression  goto 134
	function_call_as_expression  goto 78


state 107
	expression : expression '-' . expression  (73)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	expression  goto 135
	function_call_as_expression  goto 78


state 108
	expression : expression '*' . expression  (74)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	expression  goto 136
	function_call_as_expression  goto 78


state 109
	expression : expression '/' . expression  (75)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	expression  goto 137
	function_call_as_expression  goto 78


state 110
	expression : expression '%' . expression  (76)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	expression  goto 138
	function_call_as_expression  goto 78


state 111
	expression : expression '.' . ID  (80)

	ID  shift 139
	.  error


state 112
	expression : expression '[' . expression ']'  (81)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 80
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	expression  goto 140
	function_call_as_expression  goto 78

